--- a/src/config/ve_simple_bridge.yml
+++ b/src/config/ve_simple_bridge.yml
@@ -1,12 +1,12 @@
 model:
   denoiser:
-    bridge_type: 'vp'
+    bridge_type: 've_simple'
     beta_d: 2
     beta_min: 0.1
     sigma_data: 0.5
-    sigma_max: 1
-    sigma_min: 0.0001
-    schedule_sampler: 'real-uniform' # 'uniform' # 'real-uniform'
+    sigma_max: 80
+    sigma_min: 0.002
+    schedule_sampler: 'real-uniform'
     use_ema: true
     ema_decay: 0.999
     weight_decay: 1e-12
@@ -18,7 +18,7 @@ model:
     feature_size: 13
     num_layers: 6
     hidden_size: 128
-    time_cond: True # False
+    time_cond: false
     xT_type: 'noise' # 'noise' # 'none' # 'pp'
     xT_mode: 'concat_latent' # 'concat_latent' # 'none'
 
@@ -31,7 +31,7 @@ training:
   learning_rate: 0.001
   lr_anneal_steps: 0
   max_epochs: 100
-  use_lr_scheduler: false
+  use_lr_scheduler: true
   lr_scheduler_config: # 10000 warmup steps
     target: model.utils.lr_scheduler.LambdaLinearScheduler
     params:
