--- a/src/config/vp_bridge.yml
+++ b/src/config/vp_bridge.yml
@@ -19,7 +19,7 @@ model:
     num_layers: 6
     hidden_size: 128
     time_cond: True # False
-    xT_type: 'noise' # 'noise' # 'none' # 'pp'
+    xT_type: 'pp' # 'noise' # 'none' # 'pp'
     xT_mode: 'concat_latent' # 'concat_latent' # 'none'
 
 training:
