--- a/src/config/vp_bridge.yml
+++ b/src/config/vp_bridge.yml
@@ -10,8 +10,8 @@ model:
     use_ema: true
     ema_decay: 0.999
     weight_decay: 1e-12
-    weight_schedule: 'bridge_karras'
-    loss_x_weight: 100
+    weight_schedule: 'uniform' # 'bridge_karras'
+    loss_x_weight: 1e+4
 
   backbone: 
     type: 'EGNN'
@@ -20,7 +20,7 @@ model:
     hidden_size: 128
     time_cond: True # False
     xT_type: 'pp' # 'noise' # 'none' # 'pp'
-    xT_mode: 'concat_latent' # 'concat_latent' # 'none'
+    xT_mode: 'concat_graph' # 'concat_graph' # 'none'
 
 training:
   batch_size: 2500
@@ -28,10 +28,10 @@ training:
   save_interval: 1000
   test_interval: 1000
   total_training_steps: 10000000
-  learning_rate: 0.001
+  learning_rate: 0.01   # now using decay lr scheduler, so start from a high rate
   lr_anneal_steps: 0
   max_epochs: 100
-  use_lr_scheduler: false
+  use_lr_scheduler: true
   lr_scheduler_config: # 10000 warmup steps
     target: model.utils.lr_scheduler.LambdaLinearScheduler
     params:
@@ -45,4 +45,4 @@ data:
   root: ../data/cleaned_crossdocked_data
   max_node_num: 86
   coord_dim: 3
-  module: CombinedGraphDataset # PharmacophoreDataset
+  module: CombinedSparseGraphDataset # CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
