--- a/src/config/vp_simple_bridge.yml
+++ b/src/config/vp_simple_bridge.yml
@@ -10,7 +10,7 @@ model:
     use_ema: true
     ema_decay: 0.999
     weight_decay: 1e-12
-    weight_schedule: 'bridge_karras'
+    weight_schedule: 'uniform'
     loss_x_weight: 100
 
   backbone: 
@@ -19,8 +19,8 @@ model:
     num_layers: 6
     hidden_size: 128
     time_cond: false # False
-    xT_type: 'noise' # 'noise' # 'none' # 'pp'
-    xT_mode: 'concat_latent' # 'concat_latent' # 'none'
+    xT_type: 'pp' # 'noise' # 'none' # 'pp'
+    xT_mode: 'concat_graph' # 'concat_latent' # 'none'
 
 training:
   batch_size: 2500
@@ -28,7 +28,7 @@ training:
   save_interval: 1000
   test_interval: 1000
   total_training_steps: 10000000
-  learning_rate: 0.001
+  learning_rate: 0.01
   lr_anneal_steps: 0
   max_epochs: 100
   use_lr_scheduler: true
@@ -45,4 +45,4 @@ data:
   root: ../data/cleaned_crossdocked_data
   max_node_num: 86
   coord_dim: 3
-  module: CombinedGraphDataset # PharmacophoreDataset
+  module: CombinedSparseGraphDataset # PharmacophoreDataset
