--- a/src/config/qm9/vp_bridge.yml
+++ b/src/config/qm9/vp_bridge.yml
@@ -34,11 +34,11 @@ model:
     x2h_out_fc: False
     sync_twoup: False
     time_cond: True # False
-    xT_type: 'pp' # 'noise' # 'none' # 'pp'
+    xT_type: 'noise' # 'noise' # 'none' # 'pp'
     xT_mode: 'concat_graph' # 'concat_graph' # 'none'
 
 training:
-  batch_size: 512
+  batch_size: 128
   log_interval: 100
   save_interval: 1000
   test_interval: 1000
