--- a/src/config/vp_bridge_egnn.yml
+++ b/src/config/vp_bridge_egnn.yml
@@ -1,49 +1,34 @@
 model:
   denoiser:
-    bridge_type: 've'
+    bridge_type: 'vp'
     beta_d: 2
     beta_min: 0.1
     sigma_data: 0.5
-    sigma_max: 80
-    sigma_min: 0.002
-    schedule_sampler: 'real-uniform'
+    sigma_max: 1
+    sigma_min: 0.0001
+    schedule_sampler: 'real-uniform' # 'uniform' # 'real-uniform'
     use_ema: true
     ema_decay: 0.999
     weight_decay: 1e-12
-    weight_schedule: 'uniform' # 'uniform'
+    weight_schedule: 'uniform' # 'uniform' # 'bridge_karras'
     loss_x_weight: 1e+1
 
   backbone: 
-    type: 'SE3Transformer'
+    type: 'EGNN'
     feature_size: 8 # 12
-    num_blocks: 1
     num_layers: 10
     hidden_size: 128
-    num_heads: 16
-    edge_feat_dim: 4  # edge type feat
-    num_r_gaussian: 20
-    knn: 16 # !
-    num_node_types: 8 # 12
-    act_fn: relu
-    norm: True
-    cutoff_mode: knn  # [radius, none]
-    ew_net_type: global  # [r, m, none]
-    num_x2h: 1
-    num_h2x: 1
-    r_max: 10.
-    x2h_out_fc: False
-    sync_twoup: False
     time_cond: True # False
     xT_type: 'pp' # 'noise' # 'none' # 'pp'
     xT_mode: 'concat_graph' # 'concat_graph' # 'none'
 
 training:
-  batch_size: 150
+  batch_size: 200
   log_interval: 100
   save_interval: 1000
   test_interval: 1000
   total_training_steps: 10000000
-  learning_rate: 0.01
+  learning_rate: 0.01   # now using decay lr scheduler, so start from a high rate
   lr_anneal_steps: 0
   max_epochs: 100
   use_lr_scheduler: true
@@ -63,5 +48,5 @@ data:
   root: ../data/cleaned_crossdocked_data
   max_node_num: 86
   coord_dim: 3
-  module: CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
-  aromatic: true
+  module: CombinedSparseGraphDataset # CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
+  aromatic: False
