--- a/src/config/vp_bridge_egnn.yml
+++ b/src/config/vp_bridge_egnn.yml
@@ -42,11 +42,11 @@ training:
       f_min: [ 1.]
 
 sampling:
-  batch_size: 1000
+  batch_size: 2000
 
 data:
   root: ../data/cleaned_crossdocked_data
   max_node_num: 86
   coord_dim: 3
   module: CombinedSparseGraphDataset # CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
-  aromatic: False
+  aromatic: true
