--- a/src/config/vp_bridge_egnn.yml
+++ b/src/config/vp_bridge_egnn.yml
@@ -3,14 +3,11 @@ model:
     bridge_type: 'vp'
     beta_d: 2
     beta_min: 0.1
-    sigma_data: 0.5
-    sigma_max: 1
-    sigma_min: 0.0001
     schedule_sampler: 'real-uniform' # 'uniform' # 'real-uniform'
     use_ema: true
     ema_decay: 0.999
     weight_decay: 1e-12
-    weight_schedule: 'uniform' # 'uniform' # 'bridge_karras'
+    weight_schedule: 'bridge_karras' # 'uniform' # 'bridge_karras'
     loss_x_weight: 1e+1
 
   backbone: 
@@ -49,4 +46,14 @@ data:
   max_node_num: 86
   coord_dim: 3
   module: CombinedSparseGraphDataset # CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
-  aromatic: true
+  aromatic: false
+  feat:
+    sigma_data: 0.6
+    sigma_data_end: 0.7
+    sigma_max: 1
+    sigma_min: 0.0001
+  pos:
+    sigma_data: 0.1
+    sigma_data_end: 0.3
+    sigma_max: 1
+    sigma_min: 0.0001
