--- a/src/config/vp_bridge_egnn.yml
+++ b/src/config/vp_bridge_egnn.yml
@@ -27,7 +27,7 @@ training:
   total_training_steps: 10000000
   learning_rate: 0.01   # now using decay lr scheduler, so start from a high rate
   lr_anneal_steps: 0
-  max_epochs: 100
+  max_epochs: 1000
   use_lr_scheduler: true
   lr_scheduler_config: # 10000 warmup steps
     target: model.utils.lr_scheduler.LambdaLinearScheduler
@@ -46,10 +46,10 @@ data:
   max_node_num: 86
   coord_dim: 3
   module: CombinedSparseGraphDataset # CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
-  aromatic: false
+  aromatic: true
   feat:
-    sigma_data: 0.6
-    sigma_data_end: 0.7
+    sigma_data: 0.5
+    sigma_data_end: 0.5
     sigma_max: 1
     sigma_min: 0.0001
   pos:
