--- a/src/config/uncond_vp_bridge_egnn.yml
+++ b/src/config/uncond_vp_bridge_egnn.yml
@@ -1,13 +1,13 @@
 model:
   denoiser:
-    bridge_type: 've'
+    bridge_type: 'vp'
     beta_d: 2
     beta_min: 0.1
-    schedule_sampler: 'real-uniform'
+    schedule_sampler: 'real-uniform' # 'uniform' # 'real-uniform'
     use_ema: true
     ema_decay: 0.999
     weight_decay: 1e-12
-    weight_schedule: 'uniform' # 'uniform'
+    weight_schedule: 'bridge_karras' # 'uniform' # 'bridge_karras'
     loss_x_weight: 1e+1
 
   backbone: 
@@ -15,7 +15,7 @@ model:
     feature_size: 8 # 12
     num_layers: 10
     hidden_size: 128
-    time_cond: True
+    time_cond: True # False
     xT_type: 'pp' # 'noise' # 'none' # 'pp'
     xT_mode: 'concat_graph' # 'concat_graph' # 'none'
 
@@ -25,9 +25,9 @@ training:
   save_interval: 1000
   test_interval: 1000
   total_training_steps: 10000000
-  learning_rate: 0.01
+  learning_rate: 0.01   # now using decay lr scheduler, so start from a high rate
   lr_anneal_steps: 0
-  max_epochs: 100
+  max_epochs: 1000
   use_lr_scheduler: true
   lr_scheduler_config: # 10000 warmup steps
     target: model.utils.lr_scheduler.LambdaLinearScheduler
@@ -45,15 +45,15 @@ data:
   root: ../data/cleaned_crossdocked_data
   max_node_num: 86
   coord_dim: 3
-  module: CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
-  aromatic: False
+  module: CombinedUnconditionalDataset # CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
+  aromatic: true
   feat:
     sigma_data: 0.7
     sigma_data_end: 1.0
-    sigma_max: 80
-    sigma_min: 0.002
+    sigma_max: 1
+    sigma_min: 0.0001
   pos:
     sigma_data: 0.1
     sigma_data_end: 0.3
-    sigma_max: 80
-    sigma_min: 0.002
+    sigma_max: 1
+    sigma_min: 0.0001
