--- a/src/config/ve_bridge_egnn.yml
+++ b/src/config/ve_bridge_egnn.yml
@@ -46,7 +46,7 @@ data:
   max_node_num: 86
   coord_dim: 3
   module: CombinedSparseGraphDataset # CombinedGraphDataset # PharmacophoreDataset
-  aromatic: False
+  aromatic: false
   feat:
     sigma_data: 0.7
     sigma_data_end: 1.0
