--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+.vscode
+
 # custom
 data/
 lightning_logs/
