--- a/environment.yml
+++ b/environment.yml
@@ -1,234 +1,254 @@
 name: pp2drug
 channels:
-  - conda-forge
+  - pytorch
+  - nvidia
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - astunparse=1.6.3=pyhd8ed1ab_0
-  - blosc=1.21.5=h0f2a231_0
-  - boost=1.74.0=py310h7c3ba0c_5
-  - boost-cpp=1.74.0=h6cacc03_7
-  - brotli=1.1.0=hd590300_1
-  - brotli-bin=1.1.0=hd590300_1
-  - bzip2=1.0.8=hd590300_5
-  - c-ares=1.28.1=hd590300_0
-  - c-blosc2=2.14.3=hb4ffafa_0
-  - ca-certificates=2024.2.2=hbcca054_0
-  - cairo=1.16.0=ha00ac49_1009
-  - certifi=2024.2.2=pyhd8ed1ab_0
-  - chardet=5.2.0=py310hff52083_1
-  - contourpy=1.2.1=py310hd41b1e2_0
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - expat=2.6.2=h59595ed_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_1
-  - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.51.0=py310h2372a71_0
-  - freetype=2.12.1=h267a509_2
-  - freetype-py=2.3.0=pyhd8ed1ab_0
-  - greenlet=3.0.3=py310hc6cd4ac_0
-  - hdf5=1.14.3=nompi_h4f84152_100
-  - icu=69.1=h9c3ff4c_0
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.5=py310hd41b1e2_1
-  - krb5=1.21.2=h659d440_0
-  - lcms2=2.16=hb7c19ff_0
-  - ld_impl_linux-64=2.40=h41732ed_0
-  - lerc=4.0.0=h27087fc_0
-  - libaec=1.1.3=h59595ed_0
-  - libblas=3.9.0=22_linux64_openblas
-  - libbrotlicommon=1.1.0=hd590300_1
-  - libbrotlidec=1.1.0=hd590300_1
-  - libbrotlienc=1.1.0=hd590300_1
-  - libcblas=3.9.0=22_linux64_openblas
-  - libcurl=8.7.1=hca28451_0
-  - libdeflate=1.20=hd590300_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=hd590300_2
-  - libexpat=2.6.2=h59595ed_0
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=13.2.0=h807b86a_5
-  - libgfortran-ng=13.2.0=h69a702a_5
-  - libgfortran5=13.2.0=ha4646dd_5
-  - libglib=2.80.0=hf2295e7_4
-  - libgomp=13.2.0=h807b86a_5
-  - libiconv=1.17=hd590300_2
-  - libjpeg-turbo=3.0.0=hd590300_1
-  - liblapack=3.9.0=22_linux64_openblas
-  - libnghttp2=1.58.0=h47da74e_1
-  - libnsl=2.0.1=hd590300_0
-  - libopenblas=0.3.27=pthreads_h413a1c8_0
-  - libpng=1.6.43=h2797004_0
-  - libsqlite=3.45.2=h2797004_0
-  - libssh2=1.11.0=h0841786_0
-  - libstdcxx-ng=13.2.0=h7e041cc_5
-  - libtiff=4.6.0=h1dd3fc0_3
-  - libuuid=2.38.1=h0b41bf4_0
-  - libwebp-base=1.3.2=hd590300_1
-  - libxcb=1.15=h0b41bf4_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libzlib=1.2.13=hd590300_5
-  - lz4-c=1.9.4=hcb278e6_0
-  - lzo=2.10=h516909a_1000
-  - matplotlib-base=3.8.4=py310h62c0568_0
-  - mdtraj=1.9.9=py310h523e8d7_1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.4.20240210=h59595ed_0
-  - nomkl=1.0=h5ca1d4c_0
-  - numexpr=2.9.0=py310hc2d3c2e_100
-  - numpy=1.26.4=py310hb13e2d6_0
-  - openjpeg=2.5.2=h488ebb8_0
-  - openssl=3.2.1=hd590300_1
-  - packaging=24.0=pyhd8ed1ab_0
-  - pandas=2.2.1=py310hcc13569_0
-  - pcre2=10.43=hcad00b1_0
-  - pillow=10.3.0=py310hf73ecf8_0
-  - pip=24.0=pyhd8ed1ab_0
-  - pixman=0.43.2=h59595ed_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - py-cpuinfo=9.0.0=pyhd8ed1ab_0
-  - pycairo=1.25.0=py310hda9f760_1
-  - pyparsing=3.1.2=pyhd8ed1ab_0
-  - pytables=3.9.2=py310h374b01c_1
-  - python=3.10.14=hd12c33a_0_cpython
-  - python-tzdata=2024.1=pyhd8ed1ab_0
-  - python_abi=3.10=4_cp310
-  - pytz=2024.1=pyhd8ed1ab_0
-  - rdkit=2022.03.5=py310h1c297d8_0
-  - readline=8.2=h8228510_1
-  - reportlab=4.1.0=py310h2372a71_0
-  - rlpycairo=0.2.0=pyhd8ed1ab_0
-  - scipy=1.13.0=py310hb13e2d6_0
-  - setuptools=69.2.0=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.1.10=hdb0a2a9_1
-  - sqlalchemy=2.0.29=py310h2372a71_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - typing-extensions=4.11.0=hd8ed1ab_0
-  - typing_extensions=4.11.0=pyha770c72_0
-  - tzdata=2024a=h0c530f3_0
-  - unicodedata2=15.1.0=py310h2372a71_0
-  - wheel=0.43.0=pyhd8ed1ab_1
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.1.1=hd590300_0
-  - xorg-libsm=1.2.4=h7391055_0
-  - xorg-libx11=1.7.2=h7f98852_0
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h0b41bf4_1003
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.6=h166bdaf_0
-  - zlib=1.2.13=hd590300_5
-  - zlib-ng=2.0.7=h0b41bf4_0
-  - zstd=1.5.5=hfc55251_0
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - blas=1.0=mkl
+  - brotli-python=1.0.9=py310h6a678d5_8
+  - bzip2=1.0.8=h5eee18b_6
+  - ca-certificates=2024.9.24=h06a4308_0
+  - certifi=2024.8.30=py310h06a4308_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cuda-cudart=11.7.99=0
+  - cuda-cupti=11.7.101=0
+  - cuda-libraries=11.7.1=0
+  - cuda-nvrtc=11.7.99=0
+  - cuda-nvtx=11.7.91=0
+  - cuda-runtime=11.7.1=0
+  - ffmpeg=4.3=hf484d3e_0
+  - filelock=3.13.1=py310h06a4308_0
+  - freetype=2.12.1=h4a9f257_0
+  - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py310heeb90bb_0
+  - gnutls=3.6.15=he1e5248_0
+  - idna=3.7=py310h06a4308_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - jinja2=3.1.3=py310h06a4308_0
+  - jpeg=9e=h5eee18b_1
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libcublas=11.10.3.66=0
+  - libcufft=10.7.2.124=h4fbf590_0
+  - libcufile=1.9.1.3=0
+  - libcurand=10.3.5.147=0
+  - libcusolver=11.4.0.1=0
+  - libcusparse=11.7.4.91=0
+  - libdeflate=1.17=h5eee18b_1
+  - libffi=3.4.4=h6a678d5_1
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h5eee18b_3
+  - libidn2=2.3.4=h5eee18b_0
+  - libnpp=11.7.4.75=0
+  - libnvjpeg=11.8.0.2=0
+  - libpng=1.6.39=h5eee18b_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
+  - libtiff=4.5.1=h6a678d5_0
+  - libunistring=0.9.10=h27cfd23_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - lz4-c=1.9.4=h6a678d5_1
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py310h5eee18b_1
+  - mkl_fft=1.3.8=py310h5eee18b_0
+  - mkl_random=1.2.4=py310hdb19cb5_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.3.0=py310h06a4308_0
+  - ncurses=6.4=h6a678d5_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=3.1=py310h06a4308_0
+  - numpy=1.26.4=py310h5f9d8c6_0
+  - numpy-base=1.26.4=py310hb5e798b_0
+  - openh264=2.1.1=h4ff587b_0
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=3.0.15=h5eee18b_0
+  - pillow=10.3.0=py310h5eee18b_0
+  - pip=24.0=py310h06a4308_0
+  - pysocks=1.7.1=py310h06a4308_0
+  - python=3.10.15=he870216_1
+  - pytorch=2.0.1=py3.10_cuda11.7_cudnn8.5.0_0
+  - pytorch-cuda=11.7=h778d358_5
+  - pytorch-mutex=1.0=cuda
+  - readline=8.2=h5eee18b_0
+  - requests=2.32.2=py310h06a4308_0
+  - setuptools=69.5.1=py310h06a4308_0
+  - sqlite=3.45.3=h5eee18b_0
+  - tbb=2021.8.0=hdb19cb5_0
+  - tk=8.6.14=h39e8969_0
+  - torchaudio=2.0.2=py310_cu117
+  - torchtriton=2.0.0=py310
+  - torchvision=0.15.2=py310_cu117
+  - typing_extensions=4.11.0=py310h06a4308_0
+  - urllib3=2.2.1=py310h06a4308_0
+  - wheel=0.43.0=py310h06a4308_0
+  - xz=5.4.6=h5eee18b_1
+  - zlib=1.2.13=h5eee18b_1
+  - zstd=1.5.5=hc292b87_2
   - pip:
-      - aiohttp==3.9.4
+      - aiohttp==3.9.5
       - aiosignal==1.3.1
+      - ansi2html==1.9.2
       - antlr4-python3-runtime==4.9.3
-      - appdirs==1.4.4
+      - anyio==4.4.0
+      - argon2-cffi==23.1.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
       - asttokens==2.4.1
+      - async-lru==2.0.4
       - async-timeout==4.0.3
       - attrs==23.2.0
-      - botocore==1.34.80
-      - charset-normalizer==3.3.2
+      - babel==2.15.0
+      - beautifulsoup4==4.12.3
+      - bleach==6.1.0
+      - blinker==1.8.2
+      - cffi==1.16.0
       - click==8.1.7
-      - cmake==3.29.2
       - comm==0.2.2
-      - datetime==5.5
+      - contourpy==1.2.1
+      - cycler==0.12.1
+      - dash==2.17.1
+      - dash-core-components==2.0.0
+      - dash-html-components==2.0.0
+      - dash-table==5.0.0
       - debugpy==1.8.1
       - decorator==5.1.1
+      - defusedxml==0.7.1
       - docker-pycreds==0.4.0
-      - exceptiongroup==1.2.0
+      - exceptiongroup==1.2.1
       - executing==2.0.1
-      - filelock==3.13.4
+      - fastjsonschema==2.19.1
+      - flask==3.0.3
+      - fonttools==4.52.4
+      - fqdn==1.5.1
       - frozenlist==1.4.1
-      - fsspec==2024.3.1
+      - fsspec==2024.5.0
       - gitdb==4.0.11
       - gitpython==3.1.43
-      - idna==3.7
+      - h11==0.14.0
+      - httpcore==1.0.5
+      - httpx==0.27.0
+      - imageio==2.36.0
+      - importlib-metadata==7.2.1
       - ipykernel==6.29.4
-      - ipython==8.23.0
+      - ipython==8.24.0
+      - ipywidgets==8.1.3
+      - isoduration==20.11.0
+      - itsdangerous==2.2.0
       - jedi==0.19.1
-      - jinja2==3.1.3
-      - jmespath==1.0.1
-      - joblib==1.4.0
-      - jupyter-client==8.6.1
+      - joblib==1.4.2
+      - json5==0.9.25
+      - jsonpointer==2.4
+      - jsonschema==4.22.0
+      - jsonschema-specifications==2023.12.1
+      - jupyter==1.0.0
+      - jupyter-client==8.6.2
+      - jupyter-console==6.6.3
       - jupyter-core==5.7.2
+      - jupyter-dash==0.4.2
+      - jupyter-events==0.10.0
+      - jupyter-lsp==2.2.5
+      - jupyter-server==2.14.0
+      - jupyter-server-terminals==0.5.3
+      - jupyterlab==4.2.2
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.27.2
+      - jupyterlab-widgets==3.0.11
+      - kiwisolver==1.4.5
       - lightning==2.2.1
       - lightning-utilities==0.11.2
-      - lit==18.1.3
-      - lxml==5.2.1
       - markupsafe==2.1.5
-      - matplotlib-inline==0.1.6
-      - mpmath==1.3.0
+      - matplotlib==3.9.0
+      - matplotlib-inline==0.1.7
+      - mistune==3.0.2
+      - msgpack==1.1.0
       - multidict==6.0.5
+      - nbclient==0.10.0
+      - nbconvert==7.16.4
+      - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.3
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cuda-cupti-cu11==11.7.101
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-runtime-cu11==11.7.99
-      - nvidia-cudnn-cu11==8.5.0.96
-      - nvidia-cufft-cu11==10.9.0.58
-      - nvidia-curand-cu11==10.2.10.91
-      - nvidia-cusolver-cu11==11.4.0.1
-      - nvidia-cusparse-cu11==11.7.4.91
-      - nvidia-nccl-cu11==2.14.3
-      - nvidia-nvtx-cu11==11.7.91
+      - nodejs==0.1.1
+      - notebook==7.2.1
+      - notebook-shim==0.2.4
       - omegaconf==2.3.0
       - openbabel==3.1.1.1
-      - parso==0.8.3
+      - optional-django==0.1.0
+      - overrides==7.7.0
+      - packaging==24.0
+      - pandas==2.2.2
+      - pandocfilters==1.5.1
+      - parso==0.8.4
       - pexpect==4.9.0
-      - pharmd==0.1.1
-      - platformdirs==4.2.0
-      - plip==2.3.0
-      - pmapper==1.0.4
-      - principalmapper==1.1.5
-      - prompt-toolkit==3.0.43
+      - platformdirs==4.2.2
+      - plotly==5.22.0
+      - prometheus-client==0.20.0
+      - prompt-toolkit==3.0.45
       - protobuf==4.25.3
-      - psearch==0.0.4
       - psutil==5.9.8
       - ptyprocess==0.7.0
       - pure-eval==0.2.2
-      - pydot==2.0.0
+      - py3dmol==2.1.0
+      - pycparser==2.22
       - pyg-lib==0.4.0+pt20cu117
-      - pygments==2.17.2
+      - pygments==2.18.0
+      - pyparsing==3.1.2
       - python-dateutil==2.9.0.post0
-      - pytorch-lightning==2.2.1
+      - python-json-logger==2.0.7
+      - pytorch-lightning==2.2.5
+      - pytz==2024.1
       - pyyaml==6.0.1
-      - pyzmq==25.1.2
-      - requests==2.31.0
-      - scikit-learn==1.4.2
-      - sentry-sdk==1.45.0
+      - pyzmq==26.0.3
+      - qtconsole==5.5.2
+      - qtpy==2.4.1
+      - rdkit==2022.3.5
+      - referencing==0.35.1
+      - retrying==1.3.4
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rpds-py==0.18.1
+      - scikit-learn==1.5.0
+      - scipy==1.13.1
+      - seaborn==0.13.2
+      - send2trash==1.8.3
+      - sentry-sdk==2.3.1
       - setproctitle==1.3.3
+      - six==1.16.0
       - smmap==5.0.1
+      - sniffio==1.3.1
+      - soupsieve==2.5
       - stack-data==0.6.3
-      - sympy==1.12
-      - threadpoolctl==3.4.0
-      - torch==2.0.1
+      - swig==4.2.1
+      - sympy==1.13.3
+      - tenacity==8.4.1
+      - terminado==0.18.1
+      - threadpoolctl==3.5.0
+      - tinycss2==1.3.0
+      - tomli==2.0.1
       - torch-cluster==1.6.3+pt20cu117
-      - torch-geometric==2.5.2
+      - torch-geometric==2.5.3
       - torch-scatter==2.1.2+pt20cu117
       - torch-sparse==0.6.18+pt20cu117
       - torch-spline-conv==1.2.2+pt20cu117
-      - torchaudio==2.0.2
-      - torchmetrics==1.3.2
-      - torchvision==0.15.2
+      - torchmetrics==1.4.0.post0
       - tornado==6.4
-      - tqdm==4.66.2
-      - traitlets==5.14.2
-      - triton==2.0.0
-      - urllib3==2.2.1
-      - wandb==0.16.6
+      - tqdm==4.66.4
+      - traitlets==5.14.3
+      - types-python-dateutil==2.9.0.20240316
+      - tzdata==2024.1
+      - uri-template==1.3.0
+      - wandb==0.17.0
       - wcwidth==0.2.13
+      - webcolors==1.13
+      - webencodings==0.5.1
+      - websocket-client==1.8.0
+      - werkzeug==3.0.3
+      - widgetsnbextension==4.0.11
       - yarl==1.9.4
-      - zope-interface==6.3
-prefix: /home/conghao001/miniconda3/envs/pp2drug
+      - zipp==3.19.2
+prefix: /home2/conghao001/miniconda3/envs/pp2drug
